Initial header structure and style

--- a/src/assets/stylesheets/app.scss
+++ b/src/assets/stylesheets/app.scss
@@ -5,3 +5,8 @@
 // Settings
 @import './settings/breakpoints';
 @import './settings/typography';
+@import './settings/colors';
+@import './settings/utilities';
+
+// Components
+@import './components/header';
