--- a/src/assets/stylesheets/app.scss
+++ b/src/assets/stylesheets/app.scss
@@ -10,5 +10,8 @@
 
 // Components
 @import './components/header';
+@import './components/main';
 @import './components/search';
 @import './components/pokeball';
+@import './components/list';
+@import './components/cart';
