--- a/src/assets/stylesheets/components/_search.scss
+++ b/src/assets/stylesheets/components/_search.scss
@@ -2,6 +2,10 @@
   width: 100%;
   margin: 20px 0;
 
+  @include breakpoint(desktop) {
+    width:calc(100vw - 500px)
+  }
+
   &__label {
     display: flex;
     width: 100%;
