Implement and adjust Pokemon card and main list

--- a/src/assets/stylesheets/app.scss
+++ b/src/assets/stylesheets/app.scss
@@ -14,4 +14,5 @@
 @import './components/search';
 @import './components/pokeball';
 @import './components/list';
+@import './components/card';
 @import './components/cart';
