--- a/src/assets/stylesheets/components/_header.scss
+++ b/src/assets/stylesheets/components/_header.scss
@@ -92,6 +92,7 @@
     position: fixed;
     top: 0;
     right: -100vw;
+    z-index: 2;
     width: 100vw;
     height: 100vh;
     background-color: var(--theme);
