--- a/src/assets/stylesheets/components/_list.scss
+++ b/src/assets/stylesheets/components/_list.scss
@@ -1,9 +1,15 @@
 .list {
+  display: grid;
+  grid-row-gap: 20px;
   width: 100%;
-  min-height: 500px;
-  background-color: $snow;
+
+  @include breakpoint(tablet) {
+    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+  }
 
   @include breakpoint(desktop) {
-    width:calc(100vw - 500px)
+    grid-template-columns: repeat(4, 1fr);
+    width: calc(100vw - 500px);
   }
 }
