--- a/src/assets/stylesheets/components/_search.scss
+++ b/src/assets/stylesheets/components/_search.scss
@@ -1,6 +1,6 @@
 .search {
   width: 100%;
-  margin: 20px 0;
+  margin: 0 0 20px;
 
   @include breakpoint(desktop) {
     width:calc(100vw - 500px)
