--- a/src/assets/stylesheets/components/_list.scss
+++ b/src/assets/stylesheets/components/_list.scss
@@ -10,6 +10,7 @@
 
   @include breakpoint(desktop) {
     grid-template-columns: repeat(4, 1fr);
-    width: calc(100vw - 500px);
+    max-height: 100vh;
+    overflow: auto;
   }
 }
