--- a/src/assets/stylesheets/components/_cart.scss
+++ b/src/assets/stylesheets/components/_cart.scss
@@ -1,9 +1,4 @@
 .cart {
-  &__toggle:checked ~ &__content {
-    top: 0;
-    transform: scaleY(1);
-  }
-
   &__menu {
     position: fixed;
     right: 10px;
@@ -15,6 +10,7 @@
     width: 50px;
     height: 50px;
     background-color: var(--theme);
+    border: 0;
     border-radius: 50px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .2);
 
@@ -35,33 +31,43 @@
     transition: .3s;
 
     @include breakpoint(desktop) {
-      position: static;
+      position: relative;
+      top: 0;
       width: 100%;
       height: 100%;
       transform: none;
+    }
+
+    &--open {
+      top: 0;
+      transform: scaleY(1);
     }
   }
 
   &__title {
     margin-bottom: 20px;
-    color: var(--theme);
+    color: $onyx;
     font-family: $textFont;
     font-size: 2.6rem;
     font-weight: 600;
   }
 
   &__list {
+    height: calc(100vh - 240px);
+    overflow: auto;
+
     @include breakpoint(desktop) {
       height: calc(100vh - 340px);
-      overflow: auto;
     }
   }
 
   &__item {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 3fr;
     align-items: center;
-    border: 2px solid var(--theme);
+    padding: 10px;
+    background-color: $snow;
     border-radius: 10px;
 
     &:not(:last-of-type) {
@@ -70,34 +76,98 @@
   }
 
   &__item-figure {
-    width: 100px;
-    height: 100px;
+    position: relative;
+    width: 80px;
+    height: 80px;
     padding: 10px;
-    background-color: rgba($color: var(--theme), $alpha: .6);
-    border-radius: 100px;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-color: var(--theme);
+      border-radius: 100px;
+      opacity: .1;
+    }
   }
 
   &__item-image {
+    position: relative;
     width: 100%;
   }
 
   &__item-info {
-    display: flex;
-    justify-content: space-between;
     padding: 10px;
-    color: var(--theme);
+    color: $onyx;
     font-family: $textFont;
   }
 
   &__item-title {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 600;
   }
 
   &__item-value {
     margin-top: 5px;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 400;
+  }
+
+  &__item-button {
+    position: absolute;
+    right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    background-color: var(--theme);
+    border: 0;
+    border-radius: 50px;
+    box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .2);
+    transform: translate(-1px, -1px);
+    transition: .2s;
+
+    &:active {
+      box-shadow: none;
+      transform: translate(0, 0);
+    }
+  }
+
+  &__item-icon {
+    position: relative;
+    display: block;
+    width: 10px;
+    height: 2px;
+    background-color: white;
+    transform: rotate(45deg);
+
+    &::after {
+      position: absolute;
+      display: block;
+      content: '';
+      width: 10px;
+      height: 2px;
+      background-color: white;
+      transform: rotate(90deg);
+    }
+  }
+
+  &__bottom {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    background-color: white;
+
+    @include breakpoint(desktop) {
+      position: absolute;
+    }
   }
 
   &__total {
@@ -106,9 +176,8 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin-top: 20px;
     padding: 20px 0;
-    color: var(--theme);
+    color: $onyx;
     border-top: 1px solid $snow;
     font-family: $textFont;
     font-size: 2rem;
@@ -122,10 +191,16 @@
   &__button {
     width: 100%;
     padding: 20px;
-    color: white;
-    background-color: var(--theme);
-    border: 0;
+    color: var(--theme);
+    background-color: transparent;
+    border: 2px solid var(--theme);
     font-family: $textFont;
     font-size: 1.4rem;
+
+    @include breakpoint(desktop) {
+      color: white;
+      background-color: var(--theme);
+      border: 0;
+    }
   }
 }
