--- a/src/assets/stylesheets/settings/_colors.scss
+++ b/src/assets/stylesheets/settings/_colors.scss
@@ -1,16 +1,13 @@
-// Base Colors
-$poke-red: #CC0000;
-$poke-blue: #3B4CCA;
-$poke-yellow: #FFDE00;
-
 // Theme Colors
-$fire: #FD9615;
+$default: #CC0000;
+$fire: #E68804;
 $grass: #599800;
 $water: #55C3DC;
 
 :root {
-  --theme: #{$poke-red};
+  --theme: #{$default};
 }
 
 // Secondary Colors
-$snow: #F2F2F2;
+$snow: #F3F3F3;
+$onyx: #353839;
