--- a/src/assets/stylesheets/components/_list.scss
+++ b/src/assets/stylesheets/components/_list.scss
@@ -11,6 +11,16 @@
   @include breakpoint(desktop) {
     grid-template-columns: repeat(4, 1fr);
     max-height: 100%;
+    padding: 10px 3px;
     overflow: auto;
+  }
+
+  &__noresult {
+    grid-column: 1/3;
+    margin-bottom: 20px;
+    color: var(--theme);
+    font-family: "Montserrat", sans-serif;
+    font-size: 2.4rem;
+    font-weight: 600;
   }
 }
