--- a/src/assets/stylesheets/components/_search.scss
+++ b/src/assets/stylesheets/components/_search.scss
@@ -1,21 +1,20 @@
 .search {
+  display: flex;
+  align-items: center;
   width: 100%;
   margin: 0 0 20px;
+  overflow: hidden;
+  border: 2px solid var(--theme);
+  border-radius: 30px;
 
-  &__label {
-    display: flex;
-    width: 100%;
-    border: 2px solid var(--theme);
-    border-radius: 30px;
-
-    @include breakpoint(desktop) {
-      border-width: 2px;
-    }
+  @include breakpoint(desktop) {
+    border-width: 2px;
   }
 
   &__input {
     width: 100%;
     padding: 15px;
+    color: $onyx;
     background-color: transparent;
     border: 0;
     font-size: 1.6rem;
@@ -29,5 +28,21 @@
       color: var(--theme);
       font-family: $textFont;
     }
+  }
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus {
+    border: 0;
+    -webkit-text-fill-color: $onyx;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    transition: background-color 5000s ease-in-out 0s;
+  }
+
+  &__button {
+    padding: 0;
+    background-color: transparent;
+    border: 0;
   }
 }
