--- a/src/assets/stylesheets/components/_list.scss
+++ b/src/assets/stylesheets/components/_list.scss
@@ -10,7 +10,7 @@
 
   @include breakpoint(desktop) {
     grid-template-columns: repeat(4, 1fr);
-    max-height: 100%;
+    max-height: calc(100% - 80px);
     padding: 10px 3px;
     overflow: auto;
   }
