--- a/src/assets/stylesheets/components/_modal.scss
+++ b/src/assets/stylesheets/components/_modal.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 4;
   display: none;
   justify-content: center;
   align-items: center;
@@ -24,10 +24,15 @@
 
   &__content {
     position: relative;
+    width: 90%;
     padding: 40px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .2);
+
+    @include breakpoint(desktop) {
+      width: auto;
+    }
   }
 
   &__header {
