Add selected item counter to cart button on mobile

--- a/src/assets/stylesheets/components/_cart.scss
+++ b/src/assets/stylesheets/components/_cart.scss
@@ -94,6 +94,7 @@
   }
 
   &__button {
+    position: relative;
     width: 100%;
     padding: 20px;
     color: var(--theme);
@@ -106,6 +107,28 @@
       color: white;
       background-color: var(--theme);
       border: 0;
+    }
+  }
+
+  &__items {
+    position: absolute;
+    top: -3px;
+    right: -3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 22px;
+    height: 22px;
+    color: var(--theme);
+    background-color: white;
+    border: 2px solid var(--theme);
+    border-radius: 50px;
+    font-family: $textFont;
+    font-size: 1.1rem;
+    font-weight: 600;
+
+    @include breakpoint(desktop) {
+      display: none;
     }
   }
 }
