Fix nav bug on theme change

--- a/src/assets/stylesheets/components/_header.scss
+++ b/src/assets/stylesheets/components/_header.scss
@@ -101,6 +101,7 @@
     @include breakpoint(desktop) {
       position: unset;
       height: auto;
+      background-color: transparent;
     }
 
     &--open {
